collapse feature added to comments in blog

--- a/public/static/resume.html
+++ b/public/static/resume.html
@@ -379,11 +379,11 @@
         <div class="container-fluid">
             <div class="navbar-header"> <a class="navbar-brand" href="http://kenjacau.me/">Kenjacau</a> </div>
             <ul class="nav navbar-nav">
-                <li class="home"><a href="home.erb">Home</a></li>
-                <li class="about"><a href="./views/about.erb">About Me</a></li>
-                <li class="projects"><a href="./views/project.erb">Projects</a></li>
-                <li class="blog"><a href="./views/blog.erb">Blog</a></li>
-                <li class="resume active"><a href="./views/resume.html">Resume</a></li>
+                <li class="home"><a href="/">Home</a></li>
+                <li class="about"><a href="../views/about.erb">About Me</a></li>
+                <li class="projects"><a href="../views/project.erb">Projects</a></li>
+                <li class="blog"><a href="../views/blog.erb">Blog</a></li>
+                <li class="resume active"><a href="../views/resume.html">Resume</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="./create.erb"><span class="glyphicon glyphicon-user"></span>Contact Me</a></li>
