--- a/public/static/resume.html
+++ b/public/static/resume.html
@@ -3,11 +3,15 @@
 
 <head>
      <meta charset="utf-8"> 
-     <link type="text/css" rel="stylesheet" href="../public/css/bootstrap.css"/>
-     <link rel="stylesheet" href="../public/css/style.css" type="text/css" />
+       <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  
+     <link type="text/css" rel="stylesheet" href="../css/bootstrap.css"/>
+     <link rel="stylesheet" href="../css/style.css" type="text/css" />
     
-    <script src="../public/js/bootstrap.js"></script>
-    <script src="../public/js/jquery-2.2.0.js"></script>
+    <script src="../js/bootstrap.js"></script>
+    <script src="../js/jquery-2.2.0.js"></script>
    
     
     <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -377,16 +381,16 @@
     <div class="content-wrapper">
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
-            <div class="navbar-header"> <a class="navbar-brand" href="http://kenjacau.me/">Kenjacau</a> </div>
+            <div class="navbar-header"> <a class="navbar-brand" href="/kenjacau">Kenjacau.me</a> </div>
             <ul class="nav navbar-nav">
                 <li class="home"><a href="/">Home</a></li>
-                <li class="about"><a href="../views/about.erb">About Me</a></li>
-                <li class="projects"><a href="../views/project.erb">Projects</a></li>
-                <li class="blog"><a href="../views/blog.erb">Blog</a></li>
-                <li class="resume active"><a href="../views/resume.html">Resume</a></li>
+                <li class="about"><a href="/about">About Me</a></li>
+                <li class="projects"><a href="/project">Projects</a></li>
+                <li class="blog"><a href="/blog">Blog</a></li>
+                <li class="resume active"><a href="/resume">Resume</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="./create.erb"><span class="glyphicon glyphicon-user"></span>Contact Me</a></li>
+                <li><a href="/contact"><span class="glyphicon glyphicon-user"></span>Contact Me</a></li>
             </ul>
         </div>
     </nav>
@@ -399,10 +403,10 @@
                     <div class="socialmedia">
                         <ul>
                             <li>
-                                <a href="https://www.linkedin.com/in/kenjacau"><img src="../public/images/linkedin.png"></a>
+                                <a href="https://www.linkedin.com/in/kenjacau"><img src="../images/linkedin.png"></a>
                             </li>
                             <li>
-                                <a href="https://github.com/Kenjacau"><img src="../public/images/thegithubicon.png"></a>
+                                <a href="https://github.com/Kenjacau"><img src="../images/thegithubicon.png"></a>
                             </li>
                         </ul>
                     </div>
